--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,14 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/net.sourceforge.htmlunit/webdriver -->
+        <dependency>
+            <groupId>net.sourceforge.htmlunit</groupId>
+            <artifactId>webdriver</artifactId>
+            <version>2.6</version>
+            <scope>test</scope>
+        </dependency>
+
 
     </dependencies>
 
