--- a/configuration.properties
+++ b/configuration.properties
@@ -6,7 +6,12 @@ implicitWait=15
 explicitWait=30
 fluentWait=30
 
+
 #Mobile testing configurations
 
 
 #Database connection configurations
+
+#credentials
+username=johndoe
+password=1234abcd
